--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,19 @@
 <resources>
     <string name="app_name">TruckPad-Case</string>
-    <string name="endere_o_de_origem">Endereço de origem</string>
-    <string name="endere_o_de_destino">Endereço de destino</string>
-    <string name="quantidade_de_eixos">Quantidade de eixos</string>
-    <string name="consumo_m_dio_km_l">Consumo médio (Km/L)</string>
-    <string name="_7_5">7,5</string>
-    <string name="pre_o_do_litro_do_diesel_r">Preço do litro do diesel (R$)</string>
+    <string name="endereco_origem">Endereço de origem</string>
+    <string name="endereco_destino">Endereço de destino</string>
+    <string name="quantidade_eixos">Quantidade de eixos</string>
+    <string name="consumo_medio_km_por_l">Consumo médio (Km/L)</string>
+    <string name="consumo_medio_valor_padrao">7,5</string>
+    <string name="preco_litro_do_diesel">Preço do litro do diesel (R$)</string>
     <string name="calcular_custos">Calcular custos</string>
-    <string name="_3_73">3,73</string>
+    <string name="preco_litro_do_diesel_valor_padrao">3,73</string>
+    <string name="home_fragment">Dados para pesquisa</string>
+    <string name="result_fragment">Resultado</string>
+    <string name="duracao">Duração (Horas)</string>
+    <string name="distancia">Distância (Km)</string>
+    <string name="pedagio">Pedágio (R$)</string>
+    <string name="combustivel_necessario">Combustível necessário (Litros)</string>
+    <string name="total_de_combusivel">Total de combusível (R$)</string>
+    <string name="total">Total (R$)</string>
 </resources>
